--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<html>      
+<title>Roys Page</title>
+<head>
+</head>
+<body>
+<h1>hapnin specks</h1>
+<h2>sain tae it</h2>
+<p>ya dafty hahaha</p>
+</body>
+</html>
