--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>      
-<title>Roys Page</title>
+<title>Test Page</title>
 <head>
 </head>
 <body>
-<h1>hapnin specks</h1>
-<h2>sain tae it</h2>
-<p>ya dafty hahaha</p>
+<img src="https://www.nicepng.com/png/detail/24-244698_a-clip-art-image-reading-that-this-page.png" alt="coming soon...">
+<h1>network infosec and programming blog</h1>
+<h2>by RT</h2>
+<p>coming soon...</p>
 </body>
 </html>
