--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <html>      
 <title>Test Page</title>
 <head>
+<style>
+body  {
+  background-image: url("https://www.nicepng.com/png/detail/24-244698_a-clip-art-image-reading-that-this-page.png");
+  background-color: #cccccc;
+}
+</style>
 </head>
 <body>
-<img src="https://www.nicepng.com/png/detail/24-244698_a-clip-art-image-reading-that-this-page.png" alt="coming soon...">
 <h1>network infosec and programming blog</h1>
 <h2>by RT</h2>
 <p>coming soon...</p>
