--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@ body  {
 </head>
 <body>
 <h1>network infosec and programming blog</h1>
-<h2>by RT</h2>
-<p>coming soon...</p>
+<h2>by RT coming soon...</h2>
 </body>
 </html>
